# DevSeed

./: .gitignore  README.md  pyproject.toml
devseed/: __main__.py  cli.py  main.py
devseed.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
devseed/commands/: doctor.py  generate.py  init.py  run.py  setup.py
devseed/core/: checks.py  codegen.py  console.py  endpoints.py  env.py  files.py  paths.py  project.py  schemagen.py  servicegen.py  shell.py  testgen.py
devseed/templates/: python_api.py
tests/: test_main.py
