[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devseed"
version = "0.1.0"
description = "CLI para bootstrap e workflow de projetos Python backend"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Dopplin" }
]
dependencies = [
  "typer>=0.12.3"
  "rich>=13.7.1"
]

[project.scripts]
devseed = "devseed.main:run"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["devseed*"]